Xfdesktop 4.8.0
---------------

  * Optipng the backgrops.
  * Drop the flower background.
  * Translation updates: Arabic, Croatian, French, Greek, Polish, 
    Portuguese, Romanian.


Xfdesktop 4.7.5
---------------

  * Work around Gtk 2.16 function (bug #6883).
  * Translation updates: sk, ru, cs, en_GB, lt, sv, nb, ar, pt).


Xfdesktop 4.7.4
---------------

  * Add checks for an API change in libnotify 0.7.0 (bug #6915).
  * Avoid GTK+ 2.18 and GIO 2.20 function calls (or at least guard them
    so that xfdesktop still builds with older versions).
  * Let garcon choose the default applications menu file using
    XDG_MENU_PREFIX. Drop the UserMenu kiosk option as the panel
    sort of allows to bypass it anyway.


Xfdesktop 4.7.3
---------------

  * Fix a crash caused by accessing the wrong variable when adding
    items to the right-click menu.
  * Select the correct icon style in the desktop settings on first
    start (bug #6798).
  * Depend on libwnck >= 2.22 so we no longer have to implement hacks
    for the two different "active-workspace-changed" signal variants
    in libwnck (bug #6638).
  * Add menu item monitoring.
  * Fix critical when session manager is not running (bug #6822).
  * Remove checks for older GLib/GTK+ versions that are no longer needed.
  * Allow workspace names that start with a number (bug #6318).
  * Delay notification initialization until we show one.
  * Set the correct session priority.
  * Do not call gtk_widget_show() on menus (bug #6198).
  * Translation updates: gl, ca, de, it, kk, fi, sk, pt, uk, el,
    zh_TW, da, id, eu, hu, lt.


Xfdesktop 4.7.2
---------------

  * Properly hide mounts that cannot be mounted by the user.
  * Make xfdesktop settings dialog translatable (bug #6771).
  * Translation updates: Finnish, Galician.


Xfdesktop 4.7.1
---------------

  * Port xfdesktop to GIO and drop the dependency on thunar-vfs. This
    is a major change which makes heavy use of new D-Bus methods