@@ -1,3 +1,9 @@
+Xfdesktop 4.x.y
+---------------
+
+  * Use Name field as display name of desktop files (bug #6896).
+
+
 Xfdesktop 4.8.0
 ---------------
 
